@@ -15,6 +15,10 @@
 *******************************************************************************
 
 
+xflr5 v6.14 April xxxth, 2016
+	- added mass and CoG position to the list of variables for stability polar graphs
+	- fixed a few minor bugs
+
 xflr5 v6.13 April 16th, 2016
 	- upgraded to OpenGL 3.0+ from the deprecated OpenGL 1.0
 	- improved the lighting options in 3D view
